// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Flags > --bail > should apply #0 1`] = `
Object {
  "bail": true,
  "entry": "<PROJECT_ROOT>/test/fixtures/flags/bail/entry.js",
  "mode": "development",
  "plugins": Array [
    NamedModulesPlugin {
      "options": Object {},
    },
  ],
  "reporter": "<PROJECT_ROOT>/test/fixtures/common/test-reporter.js",
}
`;

exports[`Flags > --config > should build #0 1`] = `
"Version: webpack 4.3.0
  Asset      Size  Chunks             Chunk Names
main.js  2.85 KiB    main  [emitted]  main
Entrypoint main = main.js
[./src/index.js] 43 bytes {main} [built]"
`;

exports[`Flags > --context > should apply #0 1`] = `
Object {
  "context": "<PROJECT_ROOT>/test/fixtures/common",
  "entry": "./entry-a.js",
  "mode": "development",
  "plugins": Array [
    NamedModulesPlugin {
      "options": Object {},
    },
  ],
  "reporter": "<PROJECT_ROOT>/test/fixtures/common/test-reporter.js",
}
`;

exports[`Flags > --context > should build #0 1`] = `
"Version: webpack 4.3.0
  Asset      Size  Chunks             Chunk Names
main.js  2.84 KiB    main  [emitted]  main
Entrypoint main = main.js
[./entry-a.js] 41 bytes {main} [built]"
`;

exports[`Flags > --debug > dev should apply #0 1`] = `
Object {
  "entry": "<PROJECT_ROOT>/test/fixtures/common/entry-a.js",
  "mode": "development",
  "plugins": Array [
    NamedModulesPlugin {
      "options": Object {},
    },
  ],
  "reporter": "<PROJECT_ROOT>/test/fixtures/common/test-reporter.js",
}
`;

exports[`Flags > --debug > dev should build #0 1`] = `
"Version: webpack 4.3.0
  Asset      Size  Chunks             Chunk Names
main.js  2.96 KiB    main  [emitted]  main
Entrypoint main = main.js
[./test/fixtures/common/entry-a.js] 41 bytes {main} [built]"
`;

exports[`Flags > --debug > dev should build #1 1`] = `"bf58edd8"`;

exports[`Flags > --debug > prod should apply #0 1`] = `
Object {
  "entry": "<PROJECT_ROOT>/test/fixtures/common/entry-a.js",
  "mode": "production",
  "plugins": Array [
    NamedModulesPlugin {
      "options": Object {},
    },
  ],
  "reporter": "<PROJECT_ROOT>/test/fixtures/common/test-reporter.js",
}
`;

exports[`Flags > --debug > prod should build #0 1`] = `
"Version: webpack 4.3.0
  Asset       Size  Chunks             Chunk Names
main.js  641 bytes       0  [emitted]  main
Entrypoint main = main.js
[./test/fixtures/common/entry-a.js] 41 bytes {0} [built]"
`;

exports[`Flags > --debug > prod should build #1 1`] = `"969d6c1f"`;

exports[`Flags > --debug > should apply #0 1`] = `
Object {
  "context": "<PROJECT_ROOT>",
  "entry": "<PROJECT_ROOT>/test/fixtures/common/entry-a.js",
  "mode": "development",
  "plugins": Array [
    LoaderOptionsPlugin {
      "options": Object {
        "debug": true,
        "test": Object {
          "test": [Function],
        },
      },
    },
    NamedModulesPlugin {
      "options": Object {},
    },
  ],
  "reporter": "<PROJECT_ROOT>/test/fixtures/common/test-reporter.js",
}
`;

exports[`Flags > --debug > should build #0 1`] = `
"Version: webpack 4.3.0
  Asset      Size  Chunks             Chunk Names
main.js  2.96 KiB    main  [emitted]  main
Entrypoint main = main.js
[./test/fixtures/common/entry-a.js] 41 bytes {main} [built]"
`;

exports[`Flags > --define > should apply #0 1`] = `
Object {
  "entry": "<PROJECT_ROOT>/test/fixtures/flags/define/entry.js",
  "mode": "development",
  "plugins": Array [
    DefinePlugin {
      "definitions": Object {
        "DEFINE": "'valid'",
      },
    },
    NamedModulesPlugin {
      "options": Object {},
    },
    DefinePlugin {
      "definitions": Object {
        "test": "invalid",
      },
    },
  ],
  "reporter": "<PROJECT_ROOT>/test/fixtures/common/test-reporter.js",
}
`;

exports[`Flags > --define > should build #0 1`] = `
"Version: webpack 4.3.0
  Asset      Size  Chunks             Chunk Names
main.js  3.04 KiB    main  [emitted]  main
Entrypoint main = main.js
[./test/fixtures/flags/define/entry.js] 91 bytes {main} [built]"
`;

exports[`Flags > --devtool > should apply #0 1`] = `
Object {
  "context": "<PROJECT_ROOT>",
  "devtool": "cheap-source-map",
  "entry": "<PROJECT_ROOT>/test/fixtures/common/entry-a.js",
  "mode": "development",
  "plugins": Array [
    NamedModulesPlugin {
      "options": Object {},
    },
  ],
  "reporter": "<PROJECT_ROOT>/test/fixtures/common/test-reporter.js",
}
`;

exports[`Flags > --devtool > should build #0 1`] = `
"Version: webpack 4.3.0
      Asset      Size  Chunks             Chunk Names
    main.js  2.92 KiB    main  [emitted]  main
main.js.map  2.64 KiB    main  [emitted]  main
Entrypoint main = main.js main.js.map
[./test/fixtures/common/entry-a.js] 41 bytes {main} [built]"
`;

exports[`Flags > --devtool > should build #1 1`] = `"f349b18e"`;

exports[`Flags > --devtool > should build #2 1`] = `"195aef37"`;

exports[`Flags > --entry > multi should apply #0 1`] = `
Object {
  "context": "<PROJECT_ROOT>",
  "entry": Object {
    "main": Array [
      "./test/fixtures/common/entry-a.js",
      "./test/fixtures/common/entry-b.js",
    ],
  },
  "mode": "development",
  "plugins": Array [
    NamedModulesPlugin {
      "options": Object {},
    },
  ],
  "reporter": "<PROJECT_ROOT>/test/fixtures/common/test-reporter.js",
}
`;

exports[`Flags > --entry > multi should build #0 1`] = `
"Version: webpack 4.3.0
  Asset      Size  Chunks             Chunk Names
main.js  3.98 KiB    main  [emitted]  main
Entrypoint main = main.js
[./test/fixtures/common/entry-a.js] 41 bytes {main} [built]
[./test/fixtures/common/entry-b.js] 41 bytes {main} [built]
   [0] multi ./test/fixtures/common/entry-a.js ./test/fixtures/common/entry-b.js 40 bytes {main} [built]"
`;

exports[`Flags > --entry > multi should build #1 1`] = `"80e5fd27"`;

exports[`Flags > --entry > should parse flag array #0 1`] = `
Object {
  "main": Array [
    "<PROJECT_ROOT>/test/fixtures/common/entry-a.js",
    "<PROJECT_ROOT>/test/fixtures/common/entry-b.js",
  ],
}
`;

exports[`Flags > --entry > should parse flag object #0 1`] = `
Object {
  "a": "<PROJECT_ROOT>/test/fixtures/common/entry-a.js",
  "b": "<PROJECT_ROOT>/test/fixtures/common/entry-b.js",
}
`;

exports[`Flags > --entry > should parse input #0 1`] = `
Object {
  "main": Array [
    "<PROJECT_ROOT>/test/fixtures/common/entry-a.js",
    "<PROJECT_ROOT>/test/fixtures/common/entry-c.js",
  ],
}
`;

exports[`Flags > --entry > should parse input + flag array #0 1`] = `
Object {
  "main": Array [
    "<PROJECT_ROOT>/test/fixtures/common/entry-a.js",
    "<PROJECT_ROOT>/test/fixtures/common/entry-b.js",
    "<PROJECT_ROOT>/test/fixtures/common/entry-c.js",
  ],
}
`;

exports[`Flags > --entry > should parse input + flag object #0 1`] = `
Object {
  "a": "<PROJECT_ROOT>/test/fixtures/common/entry-a.js",
  "b": "<PROJECT_ROOT>/test/fixtures/common/entry-b.js",
  "main": "<PROJECT_ROOT>/test/fixtures/common/entry-a.js",
}
`;

exports[`Flags > --entry > should parse input + single flag #0 1`] = `
Object {
  "main": Array [
    "<PROJECT_ROOT>/test/fixtures/common/entry-a.js",
    "<PROJECT_ROOT>/test/fixtures/common/entry-b.js",
  ],
}
`;

exports[`Flags > --entry > should parse single flag #0 1`] = `
Object {
  "main": "<PROJECT_ROOT>/test/fixtures/common/entry-a.js",
}
`;

exports[`Flags > --entry > single should apply #0 1`] = `
Object {
  "context": "<PROJECT_ROOT>",
  "entry": Object {
    "main": "./test/fixtures/common/entry-a.js",
  },
  "mode": "development",
  "plugins": Array [
    NamedModulesPlugin {
      "options": Object {},
    },
  ],
  "reporter": "<PROJECT_ROOT>/test/fixtures/common/test-reporter.js",
}
`;

exports[`Flags > --entry > single should build #0 1`] = `
"Version: webpack 4.3.0
  Asset      Size  Chunks             Chunk Names
main.js  2.96 KiB    main  [emitted]  main
Entrypoint main = main.js
[./test/fixtures/common/entry-a.js] 41 bytes {main} [built]"
`;

exports[`Flags > --entry > single should build #1 1`] = `"bf58edd8"`;

exports[`Flags > --module-bind > should apply #0 1`] = `
Object {
  "entry": "<PROJECT_ROOT>/test/fixtures/common/entry-a.js",
  "mode": "development",
  "module": Object {
    "rules": Array [
      Object {
        "enforce": undefined,
        "loader": "<PROJECT_ROOT>/test/fixtures/common/loader",
        "test": /\\\\\\.js\\$/,
      },
    ],
  },
  "plugins": Array [
    NamedModulesPlugin {
      "options": Object {},
    },
  ],
  "reporter": "<PROJECT_ROOT>/test/fixtures/common/test-reporter.js",
}
`;

exports[`Flags > --module-bind > should bind and build #0 1`] = `
"Version: webpack 4.3.0
  Asset      Size  Chunks             Chunk Names
main.js  2.97 KiB    main  [emitted]  main
Entrypoint main = main.js
[./test/fixtures/common/entry-a.js] 49 bytes {main} [built]"
`;

exports[`Flags > --module-bind > should bind and build #1 1`] = `"7d13f958"`;

exports[`Flags > --module-bind-all > should apply #0 1`] = `
Object {
  "entry": "<PROJECT_ROOT>/test/fixtures/common/entry-a.js",
  "mode": "development",
  "module": Object {
    "rules": Array [
      Object {
        "enforce": undefined,
        "loader": "<PROJECT_ROOT>/test/fixtures/common/loader",
        "test": /\\\\\\.js\\$/,
      },
      Object {
        "enforce": "pre",
        "loader": "<PROJECT_ROOT>/test/fixtures/common/loader-pre",
        "test": /\\\\\\.js\\$/,
      },
      Object {
        "enforce": "post",
        "loader": "<PROJECT_ROOT>/test/fixtures/common/loader-post",
        "test": /\\\\\\.js\\$/,
      },
    ],
  },
  "plugins": Array [
    NamedModulesPlugin {
      "options": Object {},
    },
  ],
  "reporter": "<PROJECT_ROOT>/test/fixtures/common/test-reporter.js",
}
`;

exports[`Flags > --module-bind-all > should bind and build #0 1`] = `
"Version: webpack 4.3.0
  Asset      Size  Chunks             Chunk Names
main.js  3.01 KiB    main  [emitted]  main
Entrypoint main = main.js
[./test/fixtures/common/entry-a.js] 86 bytes {main} [built]"
`;

exports[`Flags > --module-bind-all > should bind and build #1 1`] = `"64216e80"`;

exports[`Flags > --module-bind-post > should apply #0 1`] = `
Object {
  "entry": "<PROJECT_ROOT>/test/fixtures/common/entry-a.js",
  "mode": "development",
  "module": Object {
    "rules": Array [
      Object {
        "enforce": "post",
        "loader": "<PROJECT_ROOT>/test/fixtures/common/loader-post",
        "test": /\\\\\\.js\\$/,
      },
    ],
  },
  "plugins": Array [
    NamedModulesPlugin {
      "options": Object {},
    },
  ],
  "reporter": "<PROJECT_ROOT>/test/fixtures/common/test-reporter.js",
}
`;

exports[`Flags > --module-bind-post > should bind and build #0 1`] = `
"Version: webpack 4.3.0
  Asset      Size  Chunks             Chunk Names
main.js  2.98 KiB    main  [emitted]  main
Entrypoint main = main.js
[./test/fixtures/common/entry-a.js] 60 bytes {main} [built]"
`;

exports[`Flags > --module-bind-post > should bind and build #1 1`] = `"c2baf8bb"`;

exports[`Flags > --module-bind-pre > should apply #0 1`] = `
Object {
  "entry": "<PROJECT_ROOT>/test/fixtures/common/entry-a.js",
  "mode": "development",
  "module": Object {
    "rules": Array [
      Object {
        "enforce": "pre",
        "loader": "<PROJECT_ROOT>/test/fixtures/common/loader-pre",
        "test": /\\\\\\.js\\$/,
      },
    ],
  },
  "plugins": Array [
    NamedModulesPlugin {
      "options": Object {},
    },
  ],
  "reporter": "<PROJECT_ROOT>/test/fixtures/common/test-reporter.js",
}
`;

exports[`Flags > --module-bind-pre > should bind and build #0 1`] = `
"Version: webpack 4.3.0
  Asset      Size  Chunks             Chunk Names
main.js  2.98 KiB    main  [emitted]  main
Entrypoint main = main.js
[./test/fixtures/common/entry-a.js] 59 bytes {main} [built]"
`;

exports[`Flags > --module-bind-pre > should bind and build #1 1`] = `"f9b24195"`;

exports[`Flags > --optimize-* > max-chunks should apply #0 1`] = `
Object {
  "entry": Array [
    "<PROJECT_ROOT>/test/fixtures/common/entry-a.js",
    "<PROJECT_ROOT>/test/fixtures/common/entry-b.js",
    "<PROJECT_ROOT>/test/fixtures/common/entry-c.js",
  ],
  "mode": "development",
  "plugins": Array [
    LimitChunkCountPlugin {
      "options": Object {
        "maxChunks": 1000,
      },
    },
    NamedModulesPlugin {
      "options": Object {},
    },
  ],
  "reporter": "<PROJECT_ROOT>/test/fixtures/common/test-reporter.js",
}
`;

exports[`Flags > --optimize-* > max-chunks should build #0 1`] = `
"Version: webpack 4.3.0
  Asset      Size  Chunks             Chunk Names
main.js  4.67 KiB    main  [emitted]  main
Entrypoint main = main.js
[./test/fixtures/common/entry-a.js] 41 bytes {main} [built]
[./test/fixtures/common/entry-b.js] 41 bytes {main} [built]
[./test/fixtures/common/entry-c.js] 41 bytes {main} [built]
   [0] multi ./test/fixtures/common/entry-a.js ./test/fixtures/common/entry-b.js ./test/fixtures/common/entry-c.js 52 bytes {main} [built]"
`;

exports[`Flags > --optimize-* > max-chunks should build #1 1`] = `"adf33947"`;

exports[`Flags > --optimize-* > min-chunk-size should apply #0 1`] = `
Object {
  "entry": "<PROJECT_ROOT>/test/fixtures/common/entry-a.js",
  "mode": "development",
  "plugins": Array [
    MinChunkSizePlugin {
      "options": Object {
        "minChunkSize": 10,
      },
    },
    NamedModulesPlugin {
      "options": Object {},
    },
  ],
  "reporter": "<PROJECT_ROOT>/test/fixtures/common/test-reporter.js",
}
`;

exports[`Flags > --optimize-* > min-chunk-size should build #0 1`] = `
"Version: webpack 4.3.0
  Asset      Size  Chunks             Chunk Names
main.js  2.96 KiB    main  [emitted]  main
Entrypoint main = main.js
[./test/fixtures/common/entry-a.js] 41 bytes {main} [built]"
`;

exports[`Flags > --optimize-* > min-chunk-size should build #1 1`] = `"bf58edd8"`;

exports[`Flags > --optimize-* > minimize should apply #0 1`] = `
Object {
  "entry": "<PROJECT_ROOT>/test/fixtures/common/entry-a.js",
  "mode": "development",
  "plugins": Array [
    LoaderOptionsPlugin {
      "options": Object {
        "minimize": true,
        "test": Object {
          "test": [Function],
        },
      },
    },
    NamedModulesPlugin {
      "options": Object {},
    },
  ],
  "reporter": "<PROJECT_ROOT>/test/fixtures/common/test-reporter.js",
}
`;

exports[`Flags > --optimize-* > minimize should build #0 1`] = `
"Version: webpack 4.3.0
  Asset      Size  Chunks             Chunk Names
main.js  2.96 KiB    main  [emitted]  main
Entrypoint main = main.js
[./test/fixtures/common/entry-a.js] 41 bytes {main} [built]"
`;

exports[`Flags > --optimize-* > minimize should build #1 1`] = `"bf58edd8"`;
